fix the centering of the footer

--- a/codegirls.css
+++ b/codegirls.css
@@ -141,8 +141,11 @@ p {
 
 footer {
     font-size: smaller;
-    text-align: center;
     color: #555;
+}
+
+footer p {
+    text-align: center;
 }
 
 footer a {
