--- a/codegirls.css
+++ b/codegirls.css
@@ -18,6 +18,15 @@ header, section, footer {
     flex-direction: column;
 }
 
+section a {
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+}
+
+section a:hover {
+    background-color: #FBF4FE;	
+}
 
 @media (max-width: 750px), (orientation: portrait) {
     header, section, footer {
@@ -27,7 +36,6 @@ header, section, footer {
 
 p {
     text-align: justify;
-    margin: 10px 0;
 }
 
 
@@ -92,17 +100,6 @@ p {
     align-self: center;
 }
 
-#home a {
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-}
-
-#home a:hover {
-    background-color: #FBF4FE;
-}
-
-
 /*
  * where
  */
@@ -117,15 +114,6 @@ p {
     pointer-events: none;
 }
 
-#map a {
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-}
-
-#map a:hover {
-    background-color: #FBF4FE;
-}
 
 @media (max-width: 750px), (orientation: portrait) {
     #map {
